<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name" translatable="false">Cocò Working</string>
    <string name="aboutus" translatable="false">Info</string>
    <string name="about_piantina">In this section you can view our offices and check if there are still places available. Once selected you will have the opportunity to book it and, if within 3 days you will pass by the office, the station will be yours.</string>
    <string name="button_bacheca">Board</string>
    <string name="button_eventi">Events</string>
    <string name="button_piantina">Plan</string>
    <string name="button_vetrina">Showcase</string>
    <string name="seleziona">Select the plant:</string>
    <string name="title_piantina">PLAN</string>
    <string name="title_chi_siamo">ABOUT US</string>
    <string name="chi_siamo">We offer you spaces that are not only functional, but also beautiful to live in, that fill your working days with colors, shapes and ideas. Environments that facilitate exchange, sharing, friendship, through which one can feel a little like home. In addition, they are all personalized by Ugo Nespolo.</string>
    <string name="title_contatti">CONTACTS</string>
    <string name="email" translatable="false">reception@cocoworking.it</string>
    <string name="telefono" translatable="false">0112458501</string>
    <string name="cellulare" translatable="false">3346170959</string>
    <string name="web" translatable="false">https://www.cocoworking.it/</string>
    <string name="indirizzo" translatable="false">Corso Galileo Ferraris, 22 bis, 10121 Torino TO</string>
    <string name="title_primo_piano">FIRST PLAN</string>
    <string name="title_secondo_piano">SECOND PLAN</string>
    <string name="button_open_space" translatable="false">Open Space</string>
    <string name="button_sala_grande">Big Room</string>
    <string name="reception">Reception and relax room</string>
    <string name="button_sala_riunioni">Meeting Room</string>
    <string name="button_mensa">Canteen</string>
    <string name="button_ufficio_1">Office 1</string>
    <string name="button_ufficio_2">Office 2</string>
    <string name="button_ufficio_3">Office 3</string>
    <string name="button_ufficio_4">Office 4</string>
    <string name="libero">Free</string>
    <string name="occupato">Busy</string>
    <string name="title_profilo">PROFILE</string>
    <string name="title_dati_e_info">About</string>
    <string name="title_professione">Profession</string>
    <string name="title_collegamenti">Links</string>
    <string name="title_interessi">Interest</string>
    <string name="title_sala_riunione">MEETING ROOM</string>
    <string name="title_vetrina">SHOWCASE</string>
    <string name="title_bacheca">BOARD</string>
    <string name="title_eventi">EVENTS</string>
    <string name="button_login" translatable="false">Login</string>
    <string name="button_crea_account">Create account</string>
    <string name="title_email" translatable="false">Email</string>
    <string name="title_password" translatable="false">Password</string>
    <string name="title_name">Name</string>
    <string name="text_relax" translatable="false">Relax</string>
    <string name="text_lavoro">Job</string>
    <string name="text_sport" translatable="false">Sport</string>
    <string name="text_rispondi">Comment</string>
    <string name="event_dialog_delete">Delete this meeting?</string>
    <string name="delete">Delete</string>
    <string name="close">Close</string>
    <string name="event_input_dialog_title">Enter event title</string>
    <string name="save">Save</string>
    <string name="empty_input_text">Text is empty</string>

    <string name="title_registration">Registration</string>
    <string name="registration_description">Please fill all fields</string>
    <string name="registration_cancel_BT">Cancel</string>
    <string name="registration_Reg_BT">REGISTER</string>
    <string name="title_setup">Settings</string>
    <string name="setup_switch1">Sound</string>
    <string name="setup_switch2">Notifications</string>
    <string name="setup_setting">Account</string>
    <string name="setup_setting2">Data and storage usage</string>
    <string name="setup_setting3">Help</string>
    <string name="toolbar_settings">Settings</string>
    <string name="toolbar_quit">Log out</string>

    <!--stringhe del profilo-->
    <string name="profile_profession">Architect, interior designer</string>
    <string name="profile_interessi">Interests</string>

    <!--stringhe dei messaggi/notifiche-->
    <string name="notifiche_emailNotValid">Invalid email</string>
    <string name="notifiche_existingEmail">Email already used</string>
    <string name="notifiche_emailNotExist">Email not exist</string>
    <string name="notifiche_wrongPsw">Wrong Password</string>
    <string name="notifiche_pswNotValid">Invalid Password</string>
    <string name="notifiche_userNotAvailable">Username not available</string>
    <string name="notifiche_loginSuccess">Login success</string>
    <string name="notifiche_registrationOk">Registration completed</string>
    <string name="notifiche_meetingSaved">Saved Meeting</string>
    <string name="notifiche_orarioBusy">Busy time</string>
    <string name="notifiche_orarioFree">Time available</string>

</resources>