<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/piantina"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:visibility="visible"
    tools:context=".PiantinaActivity">

    <include
        android:id="@+id/toolbar_orange"
        layout="@layout/toolbar_orange" />

    <ImageView
        android:id="@+id/ellissi_arancione"
        android:layout_width="430dp"
        android:layout_height="131dp"
        android:layout_marginTop="25dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/semelissi_arancione" />

    <TextView
        android:id="@+id/text_primo_piano"
        android:layout_width="155dp"
        android:layout_height="52dp"
        android:layout_marginTop="16dp"
        android:gravity="center"
        android:text="@string/title_primo_piano"
        android:textAllCaps="true"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_piantina" />

    <TextView
        android:id="@+id/text_piantina"
        android:layout_width="118dp"
        android:layout_height="52dp"
        android:text="@string/title_piantina"
        android:textColor="@color/colorPrimary"
        android:textSize="40sp"
        android:textStyle="bold"
        app:fontFamily="@font/amatic_sc"
        app:layout_constraintBottom_toTopOf="@+id/text_primo_piano"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar_orange" />

    <Button
        android:id="@+id/button_reception"
        android:layout_width="0dp"
        android:layout_height="171dp"
        android:layout_marginBottom="190dp"
        android:background="#CCF2F2F2"
        android:gravity="center"
        android:text="@string/reception"
        android:textAllCaps="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/button_ufficio3"
        app:layout_constraintStart_toEndOf="@+id/button_sala_riunioni"
        app:layout_constraintTop_toBottomOf="@+id/button_open_space"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/button_open_space"
        style="@style/Widget.AppCompat.Button"
        android:layout_width="0dp"
        android:layout_height="67dp"
        android:layout_marginStart="40dp"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="18dp"
        android:background="@color/libero"
        android:gravity="center"
        android:text="@string/button_open_space"
        android:textAllCaps="false"
        android:textColor="@color/colorPrimary"
        app:layout_constraintBottom_toTopOf="@+id/button_sala_riunioni"
        app:layout_constraintEnd_toStartOf="@+id/button_sala_grande"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_primo_piano"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/button_sala_grande"
        style="@style/Widget.AppCompat.Button"
        android:layout_width="0dp"
        android:layout_height="67dp"
        android:layout_marginTop="17dp"
        android:layout_marginEnd="40dp"
        android:layout_marginRight="40dp"
        android:background="@color/occupato"
        android:gravity="center"
        android:text="@string/button_sala_grande"
        android:textAllCaps="false"
        android:textColor="@color/colorPrimary"
        app:layout_constraintBottom_toTopOf="@+id/button_ufficio3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/button_open_space"
        app:layout_constraintTop_toBottomOf="@+id/text_primo_piano" />

    <Button
        android:id="@+id/button_sala_riunioni"
        android:layout_width="93dp"
        android:layout_height="0dp"
        android:layout_marginStart="40dp"
        android:layout_marginLeft="40dp"
        android:layout_marginBottom="132dp"
        android:background="@color/occupato"
        android:gravity="center"
        android:text="@string/button_sala_riunioni"
        android:textAllCaps="false"
        android:textColor="@color/colorPrimary"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/button_reception"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_open_space" />

    <Button
        android:id="@+id/button_ufficio3"
        android:layout_width="87dp"
        android:layout_height="0dp"
        android:layout_marginEnd="40dp"
        android:layout_marginRight="40dp"
        android:background="@color/libero"
        android:text="@string/button_ufficio_1"
        android:textAllCaps="false"
        android:textColor="@color/colorPrimary"
        app:layout_constraintBottom_toTopOf="@+id/button_ufficio4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/button_reception"
        app:layout_constraintTop_toBottomOf="@+id/button_sala_grande" />

    <Button
        android:id="@+id/button_ufficio4"
        android:layout_width="87dp"
        android:layout_height="129dp"
        android:layout_marginEnd="40dp"
        android:layout_marginRight="40dp"
        android:layout_marginBottom="130dp"
        android:background="@color/libero"
        android:includeFontPadding="false"
        android:text="@string/button_ufficio_2"
        android:textAllCaps="false"
        android:textColor="@color/colorPrimary"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/button_reception"
        app:layout_constraintTop_toBottomOf="@+id/button_ufficio3" />

    <TextView
        android:id="@+id/occupata"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginEnd="24dp"
        android:layout_marginRight="24dp"
        android:text="@string/occupato"
        app:layout_constraintBottom_toBottomOf="@+id/cerchio_libero"
        app:layout_constraintEnd_toStartOf="@+id/cerchio_libero"
        app:layout_constraintStart_toEndOf="@+id/cerchio_occupato"
        app:layout_constraintTop_toTopOf="@+id/cerchio_libero" />

    <ImageView
        android:id="@+id/cerchio_occupato"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginStart="65dp"
        android:layout_marginLeft="65dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        app:layout_constraintBottom_toBottomOf="@+id/occupata"
        app:layout_constraintEnd_toStartOf="@+id/occupata"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/occupata"
        app:srcCompat="@drawable/cerchio_occupato" />

    <TextView
        android:id="@+id/libera"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="64dp"
        android:layout_marginRight="64dp"
        android:layout_marginBottom="53dp"
        android:text="@string/libero"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/cerchio_libero"
        app:layout_constraintTop_toBottomOf="@+id/button_ufficio4" />

    <ImageView
        android:id="@+id/cerchio_libero"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        app:layout_constraintBottom_toBottomOf="@+id/libera"
        app:layout_constraintEnd_toStartOf="@+id/libera"
        app:layout_constraintStart_toEndOf="@+id/occupata"
        app:layout_constraintTop_toTopOf="@+id/libera"
        app:srcCompat="@drawable/cerchio_libero" />


</androidx.constraintlayout.widget.ConstraintLayout>