<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include
        android:id="@+id/toolbar_white"
        layout="@layout/toolbar_white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/logo"
        android:layout_width="227dp"
        android:layout_height="169dp"
        android:layout_marginStart="92dp"
        android:layout_marginLeft="92dp"
        android:layout_marginEnd="92dp"
        android:layout_marginRight="92dp"
        android:contentDescription="@string/app_name"
        app:layout_constraintBottom_toTopOf="@+id/ciao"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/name"
        app:srcCompat="@mipmap/coco_logo" />

    <ImageView
        android:id="@+id/name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:contentDescription="@string/app_name"
        app:layout_constraintBottom_toTopOf="@id/toolbar_white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar_white"
        app:srcCompat="@mipmap/name" />

    <TextView
        android:id="@+id/ciao"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="20dp"
        android:gravity="center_horizontal"
        android:text="@string/title_chi_siamo"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textColor="@color/colorBase2"
        android:textSize="24sp"
        android:textStyle="normal"
        app:fontFamily="@font/montserrat"
        app:layout_constraintBottom_toTopOf="@+id/chi_siamo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.54"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logo" />

    <TextView
        android:id="@+id/chi_siamo"
        android:layout_width="345dp"
        android:layout_height="104dp"
        android:layout_marginStart="40dp"
        android:layout_marginLeft="40dp"
        android:layout_marginEnd="26dp"
        android:layout_marginRight="26dp"
        android:layout_marginBottom="16dp"
        android:text="@string/chi_siamo"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColor="#C3C3C3"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@+id/contatti"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/chi_siamo"
        tools:ignore="NotSibling" />

    <TextView
        android:id="@+id/contatti"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:gravity="center_horizontal"
        android:text="@string/title_contatti"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textColor="@android:color/tertiary_text_light"
        android:textSize="18dp"
        android:textStyle="normal"
        app:fontFamily="@font/montserrat"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/chi_siamo" />

    <TextView
        android:id="@+id/phone"
        android:layout_width="150dp"
        android:layout_height="22dp"
        android:layout_marginBottom="8dp"
        android:autoLink="phone"
        android:text="@string/telefono"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColor="#BA000000"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@+id/mobile"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/email" />

    <TextView
        android:id="@+id/mobile"
        android:layout_width="wrap_content"
        android:layout_height="21dp"
        android:layout_marginStart="50dp"
        android:layout_marginLeft="50dp"
        android:layout_marginEnd="50dp"
        android:layout_marginRight="50dp"
        android:layout_marginBottom="8dp"
        android:autoLink="phone"
        android:text="@string/cellulare"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColor="#BA000000"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@+id/address"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/phone" />

    <TextView
        android:id="@+id/address"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginLeft="50dp"
        android:layout_marginEnd="50dp"
        android:layout_marginRight="50dp"
        android:layout_marginBottom="40dp"
        android:autoLink="map"
        android:text="@string/indirizzo"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColor="#BA000000"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mobile" />

    <TextView
        android:id="@+id/web"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:autoLink="web"
        android:gravity="center_horizontal"
        android:text="@string/web"
        android:textAlignment="center"
        android:textColorLink="#BA9F9E9E"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@+id/email"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/contatti" />

    <TextView
        android:id="@+id/email"
        android:layout_width="wrap_content"
        android:layout_height="18dp"
        android:layout_marginStart="50dp"
        android:layout_marginLeft="50dp"
        android:layout_marginEnd="50dp"
        android:layout_marginRight="50dp"
        android:layout_marginBottom="8dp"
        android:autoLink="email"
        android:text="@string/email"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColorLink="#BA000000"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@+id/phone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/web"/>

    <ImageView
        android:id="@+id/link"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toStartOf="@+id/web"
        app:layout_constraintHorizontal_bias="0.932"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/ic_link"
        tools:ignore="MissingConstraints,VectorDrawableCompat"
        tools:layout_editor_absoluteY="485dp" />

    <ImageView
        android:id="@+id/mailcoco"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toStartOf="@+id/email"
        app:layout_constraintHorizontal_bias="0.938"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/ic_email"
        tools:ignore="MissingConstraints,VectorDrawableCompat"
        tools:layout_editor_absoluteY="515dp" />


</androidx.constraintlayout.widget.ConstraintLayout>